# essay-feedback-aiedu

./: .gitignore  LICENSE  README.md  compute_results.py  main.ipynb  process-openai.py  process_samples.py  requirements.txt  sampling-25.csv
.devcontainer/: devcontainer.json
datasets/: tags_test.csv
essay_feedback/: data.py  examples.py  llm.py  main.py  pyproject.toml  task.py
essay_feedback/templates/: annotate.message.mustache  system_prompt.mustache
essay_scoring/: fine_tune_base.py  test_ids.csv  train_ids.csv  train_test_arg_split.py  val_ids.csv
essay_scoring/argumentative-aes/: test.csv  val.csv
evaluate_f1_score/: evaluate.py
