[project]
name = "essay-feedback"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.49.0",
    "chevron>=0.14.0",
    "openai>=1.66.2",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.396",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
